# nglspn

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/django-backend/: .envrc  .gitignore  Dockerfile  Makefile  README.md  conftest.py  debug-docker.sh  entrypoint.sh  gunicorn.conf.py  gunicorn_logger.py  manage.py  olddb.sqlite3  pyproject.toml
src/django-backend/api/: main.py  rate_limit.py
src/django-backend/api/auth/: jwt.py  security.py
src/django-backend/api/routers/: auth.py  competitions.py  discussions.py  my_projects.py  my_review.py  projects.py  tags.py  test_auth.py  test_discussions.py  test_email_verification.py  test_health.py  test_my_projects.py  test_my_review.py  test_project_images.py  test_projects.py  users.py
src/django-backend/api/schemas/: auth.py  competition.py  discussion.py  my_review.py  project.py  tag.py  user.py
src/django-backend/api/services/: email.py  storage.py
src/django-backend/api/tasks/: email.py  images.py  notifications.py  web_ui.py
src/django-backend/apps/discussions/: admin.py  models.py
src/django-backend/apps/discussions/migrations/: 0001_initial.py
src/django-backend/apps/emails/: admin.py  models.py
src/django-backend/apps/emails/migrations/: 0001_initial.py  0002_add_broadcastemailimage.py  0003_sentemail.py  0004_sentemail_html_body.py  (+1 more)
src/django-backend/apps/notifications/: admin.py  models.py
src/django-backend/apps/projects/: admin.py  apps.py  models.py  signals.py
src/django-backend/apps/tags/: admin.py  models.py
src/django-backend/apps/users/: admin.py  models.py
src/django-backend/project_showcase/: asgi.py  loki.py  middleware.py  otel.py  settings.py  test_middleware.py  urls.py  views.py  wsgi.py
src/django-backend/scripts/: bootstrap_db.py  extract_openapi.py  seed_db.py
src/django-backend/services/: __init__.py  storage.py
src/django-backend/services/discussions/: exceptions.py  handler_interface.py  query_interface.py
src/django-backend/services/email/: __init__.py  handler_interface.py
src/django-backend/services/image/: handler_interface.py
src/django-backend/services/notifications/: handler_interface.py
src/django-backend/services/project/: exceptions.py  handler_interface.py  query_interface.py
src/django-backend/services/users/: exceptions.py  handler_interface.py  query_interface.py
src/django-backend/services/web_ui/: handler_interface.py
src/django-backend/svc/: __init__.py
src/django-backend/svc/email/: django_impl.py  exceptions.py  handler_interface.py  query_interface.py
src/django-backend/svc/project/: django_impl.py
src/django-backend/svc/users/: django_impl.py  handler_interface.py
src/django-backend/templates/: 400.html  403.html  404.html  500.html  error_base.html
src/django-backend/templates/email/: base.mjml  broadcast.mjml  broadcast.txt  discussion_digest.mjml  discussion_digest.txt  discussion_notification.mjml  discussion_notification.txt  password_reset_code.mjml  password_reset_code.txt  project_approved.mjml  project_approved.txt  verification_code.mjml  verification_code.txt
src/django-backend/tests/: conftest.py  factories.py  test_auth.py  test_broadcast_emails.py  test_competitions.py  test_email_verification.py  test_loki.py  test_my_projects.py  test_password_reset.py  test_project_emails.py  test_project_images.py  test_projects.py  test_tags.py  test_users.py
(+197 files in other folders)
